# cpi-forecast-service

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cache.py  config.py  docker-compose.yml  example.env  nginx.conf  pyproject.toml
endpoints/: forecast.py  main.py  models.py  products.py
model/: prepare_model.ipynb
models/: research_data.ipynb
models/trained_models/: allohol_50_tabletok_model.pkl  banany_kg_model.pkl  baranina_krome_beskostnogo_mjasa_kg_model.pkl  benzin_avtomobilbnyi_marki_ai-92_l_model.pkl  benzin_avtomobilbnyi_marki_ai-95_l_model.pkl  benzin_avtomobilbnyi_marki_ai-98_i_vyshe_l_model.pkl  benzin_avtomobilbnyi_model.pkl  bruki_dlja_detei_shkolbnogo_vozrasta_iz_dzhinsovoi_tkani_sht_model.pkl  bumaga_tualetnaja_rulon_model.pkl  validol_60_mg_10_tabletok_model.pkl
nginx/: Dockerfile  nginx.conf
nginx/logrotate.d/: nginx
notebooks/: research_data.ipynb
routers/: index.py
services/: _get_data.py  auto_process_data.py  clean_data.py  download_data.py  forecast.py  generate_models.py  get_data.py  tools.py
services/process_data/: auto_process_data.py  clean_data.py  download_data.py  generate_models.py
static/: data_sample.csv  scripts.js  styles.css
static/css/: styles_index.css  styles_plot.css
templates/: base.html  footer.html  index.html  plot.html
