[tool.poetry]
name = "cpi-forecast-service"
version = "0.1.0"
description = "This is a web app that uses ML to forecast Consumer Prices Indicies (CPI)"
authors = ["Artur <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9"
scikit-learn = "0.24.1"
statsmodels = "0.13.1"
pandas = "1.3.5"
numpy = "1.21.5"
flask = "2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8-pyproject = "^1.2.3"
isort = "^5.13.2"
pytest = "^8.2.2"