[tool.poetry]
name = "cpi-forecast-service"
version = "0.1.0"
description = "This is a web app that uses ML to forecast Consumer Prices Indicies (CPI)"
authors = ["Artur <RomanchenkoAS@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
flask = "2.0.3"
flask-caching = "^2.3.0"
gunicorn = "^22.0.0"
matplotlib = "*"
numpy = "1.21.5"
openpyxl = "*"
pandas = "1.3.5"
python = "3.9.19"
python-dotenv = "^1.0.1"
requests = "*"
scikit-learn = "0.24.1"
statsmodels = "0.13.1"
werkzeug = "2.2.2" # We install this manually because of versions issue



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
jupyter = "^1.0.0"
